--- a/generic_ga_template.ipynb
+++ b/generic_ga_template.ipynb
@@ -10,31 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:100% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from IPython.core.display import display, HTML\n",
     "from core import *\n",
     "\n",
-    "# convenient jupyter notebook settings\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
     "np.set_printoptions(linewidth=np.nan)"
    ]
   },
@@ -75,14 +59,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def objective_fnc(individuals: np.ndarray) -> np.ndarray:\n",
+    "def objective_fnc(genes: np.ndarray) -> np.ndarray:\n",
     "    raise NotImplementedError\n",
     "    \n",
     "# class ObjectiveFnc(ObjectiveFncBase):\n",
     "#     def __init__(self):\n",
     "#         super(ObjectiveFnc, self).__init__()\n",
     "        \n",
-    "#     def __call__(self, individuals: np.ndarray) -> np.ndarray:\n",
+    "#     def __call__(self, genes: np.ndarray) -> np.ndarray:\n",
     "#         raise NotImplementedError"
    ]
   },
@@ -99,14 +83,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fitness_fnc(individuals: np.ndarray, objectives: np.ndarray) -> np.ndarray:\n",
+    "def fitness_fnc(genes: np.ndarray, objectives: np.ndarray) -> np.ndarray:\n",
     "    raise NotImplementedError\n",
     "    \n",
     "# class FitnessFnc(FitnessFncBase):\n",
     "#     def __init__(self):\n",
     "#         super(FitnessFnc, self).__init__()\n",
     "    \n",
-    "#     def __call__(self, individuals: np.ndarray, objectives: np.ndarray) -> np.ndarray:\n",
+    "#     def __call__(self, genes: np.ndarray, objectives: np.ndarray) -> np.ndarray:\n",
     "#         raise NotImplementedError"
    ]
   },
@@ -181,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,24 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'NotImplementedType' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-944d305d7328>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m ga.run(\n\u001b[1;32m      2\u001b[0m     \u001b[0mpopulation_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mgeneration_cap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m )\n",
-      "\u001b[0;32m~/mff/evgena/genetals/core.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, population_size, generation_cap, *args, **kwargs)\u001b[0m\n\u001b[1;32m    237\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    238\u001b[0m         \u001b[0;31m# run initialization with optional params\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 239\u001b[0;31m         \u001b[0minit_individuals\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_initializer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpopulation_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    240\u001b[0m         \u001b[0minit_pop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPopulation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minit_individuals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_captures\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_pop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NotImplementedType' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result, fitnesses, objectives = ga.run(\n",
+    "result_pop, fitnesses, objectives = ga.run(\n",
     "    population_size = NotImplemented,\n",
     "    generation_cap = NotImplemented\n",
     ")"
@@ -250,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
